# akasha

./: Cargo.toml  PLAN.md  README.md  go.mod  go.sum
.claude/: settings.local.json
.devcontainer/: Dockerfile
pkg/akasha/notes/: db.go  db.sql  db_test.go  notes.go
pkg/messages/: channel.go
pkg/messages/telegram/: telegram.go
pkg/models/: e2e_test.go  models.go  tools.go  tools_test.go
pkg/models/deepseek/: api.go  model.go  model_test.go
pkg/notes/: db.sql  db_test.go
pkg/workflows/: activities.go  e2e_test.go  sessions.go  worker.go
src/core/: mod.rs  provider.rs  types.rs
src/extra/providers/: deepseek.rs
