[package]
name = "akasha"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
